pwa config ready, app ready to be download

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="apple-mobile-web-app-title" content="Rock Paper Scissors" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Rock Paper Scissors App</title>
   </head>
